# agentease

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-agent.yml  release.yml  test-pypi.yml
agentease/: __init__.py  client.py  config.py  exceptions.py  offline.py  offline_registry.py
agentease/guardrails/: __init__.py  json_enforcer.py  pii_scrubber.py
agentease/telemetry/: __init__.py  metrics.py
agentease/templates/: __init__.py  base.py  doc_classification_agent.py  lead_qualification_agent.py  triage_agent.py
examples/: batch_triage_jsonl.py  document_classification.py  lead_qualification.py  support_triage.py
examples/data/: support_tickets.jsonl
scripts/: gh-login.sh
tests/: _fakes.py  test_base_agent.py  test_batch_triage_jsonl.py  test_client_api.py  test_config.py  test_doc_classification_agent.py  test_json_enforcer.py  test_lead_qualification_agent.py  test_offline.py  test_offline_registry.py  test_pii_scrubber.py  test_triage_agent.py
